--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,9 +40,9 @@ jobs:
       with:
         terraform_version: 1.0.0
 
-    - name: 'Terraform Format'
-      run: terraform fmt -check
-      continue-on-error: true
+    # - name: 'Terraform Format'
+    #   run: terraform fmt -check
+    #   continue-on-error: true
 
     - name: 'Terraform Init'
       run: terraform init
